--- a/style.css
+++ b/style.css
@@ -46,3 +46,176 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+body{
+	font-family: Arial, Helvetica, sans-serif;
+}
+body a{
+	text-decoration: none;
+	display: block;
+}
+.wrap{
+	margin: 0 auto;
+	width: 1003px;
+	margin-top: 30px;
+}
+.top{
+	width: 1003px;
+	position: fixed;
+	top:0;
+}
+.topbar{
+	background: #f6f6f6;
+	display: flex;
+	justify-content: flex-end;
+}
+.topbar ul{
+	display: flex;
+	align-items: center;
+}
+.topbar a{
+	font-size: 14px;
+	margin: 7px 0;
+	padding: 0 7px;
+	display: flex;
+	align-items: center;
+}
+.topbar ul img{
+	margin-right: 3px;
+}
+.FB{
+	color: #425e9f;
+	border-right: 1px solid gray;
+}
+.twitter{
+	color: #00acee;
+}
+.header{
+	display: flex;
+	justify-content: space-between;
+	box-shadow: 2px 2px 3px gray;
+	background: #fff;
+}
+.header h1 a{
+	background-image: url(../images/logo.png);
+	width: 173px;
+	height: 51px;
+	text-indent: 101%;
+	white-space: nowrap;
+	overflow: hidden;
+	margin: 0 7px;
+}
+.header ul{
+	display: flex;
+}
+.header li a{
+	color: #00cd99;
+	font-size: 14px;
+	padding: 18px 11px;
+}
+.header li a:hover{
+	border-bottom:4px solid #00cd99;
+}
+.banner{
+	background-image: url(../images/banner_09.png);
+	padding: 130px 0 90px 0;
+	margin-bottom: 64px;
+}
+.banner h2{
+	color: #fff;
+	font-size: 34px;
+	background: rgba(0%,0%,0%,0.6);
+	padding: 37px 0 37px 23px;
+	line-height: 1.5;
+}
+.course{
+	display: flex;
+	justify-content: space-around;
+	margin-bottom: 60px;
+}
+.course li{
+	box-shadow:0px 2px 2px gray;
+	padding: 24px;
+	margin: 0 15px;
+	line-height: 1.5;
+	border-radius: 4px;
+	-webkit-border-radius: 4px;
+}
+.course li h3{
+	font-size: 20px;
+	text-align: center;
+}
+.course li p{
+	text-align: left;
+}
+.table{
+	margin: 0 66px 60px 66px;
+}
+.table h3{
+	text-align: center;
+	font-size: 24px;
+	margin-bottom: 30px;
+}
+.table th,.table td{
+	padding: 14px 100px 14px 14px;
+	border-bottom:1px solid #dddddd;
+}
+.table th{
+	background: #f7f7f7;
+	text-align: left;
+	border-top:1px solid #dddddd;
+}
+.green{
+	color: #02a77d;
+}
+.infor{
+	background-image: url(../images/bg.png);
+	padding: 20px;
+	color: #fff;
+}
+.infor h4{
+	font-size: 26px;
+	line-height: 1.5;
+	text-align: center;
+	margin-bottom: 20px;
+}
+.form{
+	display: flex;
+	justify-content: space-between;
+	line-height: 1.5;
+	position: relative;
+}
+.form textarea, .form input{
+	border-radius: 3px;
+	-webkit-border-radius:3px;
+	border: transparent;
+	width: 460px;
+}
+.form input{
+	margin-bottom: 20px;
+	font-size: 14px;
+	padding: 5px;
+}
+.form input:focus, .form textarea:focus{
+	outline: 2px solid #00cc99;
+}
+#submit{
+	background: #00cc99;
+	color: #ffffff;
+	position: absolute;
+	right:0;
+	bottom: 0;
+	width: 70px;
+}
+.footer{
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 60px;
+	padding: 25px;
+}
+.footer li{
+	line-height: 1.5;
+}
+.footer li a{
+	display: inline;
+	color: #e45994;
+}
