--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ body a{
 	background: #fff;
 }
 .header h1 a{
-	background-image: url(../images/logo.png);
+	background-image: url(images/logo.png);
 	width: 173px;
 	height: 51px;
 	text-indent: 101%;
