--- a/style.css
+++ b/style.css
@@ -168,7 +168,8 @@ body a{
 	color: #02a77d;
 }
 .infor{
-	background-image: url(images/bg.png);
+	background-image: url(images/bg.png) ;
+	background-repeat: repeat-x;
 	padding: 20px;
 	color: #fff;
 }
