--- a/rwd/rwd-style.css
+++ b/rwd/rwd-style.css
@@ -53,6 +53,10 @@ body a{
 	text-decoration: none;
 	display: block;
 }
+img{
+	max-width: 100%;
+	height: auto;
+}
 .wrap{
 	margin: 0 auto;
 	max-width: 1003px;
@@ -225,4 +229,23 @@ body a{
 .footer li a{
 	display: inline;
 	color: #e45994;
+}
+@media(max-width:767px){
+	.wrap{
+		width: 100%;
+		margin: 30px 30px 0 30px;
+	}
+	.top{
+		width: 100%;
+	}
+	.table th,.table td{
+		padding: 14px 40px 14px 14px;
+		font-size: 90%;
+	}
+	.course, .form{
+		flex-direction: column;
+	}
+}
+@media(max-width:480px){
+	
 }
